# assets

./: README.md
cloud/: bump.pcd  crop.py  dense_dust.pcd  flat.pcd  fog.pcd  move.py  pcd_visualize.py  plane1.pcd  road.pcd  slope.pcd  standing_water.pcd  thin_dust.pcd
paper/: 2013 GPS和INS组合导航算法研究.caj  2017 室内移动机器人路径规划及轨迹跟踪控制研究.caj  README.md
preprocess_cloud/: bag2pcd.py  move.py
preprocess_cloud/cloud_conversion/: CMakeLists.txt  package.xml
preprocess_cloud/cloud_conversion/cmake/: PCL.cmake
preprocess_cloud/cloud_conversion/config/: params.yaml
preprocess_cloud/cloud_conversion/src/: bag2bin_node.cpp  bag2pcd_node.cpp  bin2pcd_node.cpp  pcd2bin_node.cpp  pcd_v.cpp
preprocess_cloud/pclv/: CMakeLists.txt  pclv.cpp  pclv.py
