<?xml version="1.0"?>
<package>
  <name>convert_cloud</name>
  <version>1.0.0</version>
  <description>
    convert cloud between rosbag, pcd, bin and so on.
  </description>
  <maintainer email="qingshiji96@gmail.com">
  </maintainer>
  <license>public code</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

</package>

